Undo global component: HostEndpointsUpgrade

--- a/calico_versioned_docs/version-3.27/operations/upgrading/openshift-upgrade.mdx
+++ b/calico_versioned_docs/version-3.27/operations/upgrading/openshift-upgrade.mdx
@@ -2,6 +2,8 @@
 description: Upgrade to a newer version of Calico for OpenShift.
 ---
 
+import HostEndpointsUpgrade from '@site/calico_versioned_docs/version-3.27/_includes/components/HostEndpointsUpgrade';
+
 # Upgrade Calico on OpenShift 4
 
 ## About upgrading {{prodname}}
