--- a/calico-enterprise/getting-started/install-on-clusters/openshift/installation.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/openshift/installation.mdx
@@ -2,6 +2,8 @@
 description: Install Calico Enterprise on an OpenShift 4 cluster.
 ---
 
+import InstallOpenshiftBeforeYouBegin from '@site/calico-enterprise/_includes/components/InstallOpenshiftBeforeYouBegin';
+
 # Install Calico Enterprise on OpenShift
 
 import InstallOpenShiftManifests from '@site/calico-enterprise/_includes/components/InstallOpenShiftManifests.js';
