--- a/calico-enterprise_versioned_docs/version-3.17/getting-started/install-on-clusters/windows-calico/openshift-installation.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/getting-started/install-on-clusters/windows-calico/openshift-installation.mdx
@@ -2,6 +2,8 @@
 description: Install Calico Enterprise on an OpenShift 4 cluster on Windows nodes
 ---
 
+import InstallOpenshiftBeforeYouBegin from '@site/calico-enterprise_versioned_docs/version-3.17/_includes/components/InstallOpenshiftBeforeYouBegin';
+
 # Install an OpenShift 4 cluster on Windows nodes
 
 :::note
