--- a/calico-enterprise_versioned_docs/version-3.20-1/getting-started/install-on-clusters/openshift/installation.mdx
+++ b/calico-enterprise_versioned_docs/version-3.20-1/getting-started/install-on-clusters/openshift/installation.mdx
@@ -2,6 +2,8 @@
 description: Install Calico Enterprise on an OpenShift 4 cluster.
 ---
 
+import InstallOpenshiftBeforeYouBegin from '@site/calico-enterprise_versioned_docs/version-3.20-1/_includes/components/InstallOpenshiftBeforeYouBegin';
+
 # Install Calico Enterprise on OpenShift
 
 import InstallOpenShiftManifests from '@site/calico-enterprise_versioned_docs/version-3.20-1/_includes/components/InstallOpenShiftManifests.js';
