--- a/calico-enterprise_versioned_docs/version-3.20-1/getting-started/install-on-clusters/windows-calico/manual-install/openshift-installation.mdx
+++ b/calico-enterprise_versioned_docs/version-3.20-1/getting-started/install-on-clusters/windows-calico/manual-install/openshift-installation.mdx
@@ -2,6 +2,8 @@
 description: Install Calico Enterprise on an OpenShift 4 cluster on Windows nodes
 ---
 
+import InstallOpenshiftBeforeYouBegin from '@site/calico-enterprise_versioned_docs/version-3.20-1/_includes/components/InstallOpenshiftBeforeYouBegin';
+
 # Calico Enterprise for Windows on an OpenShift 4 cluster (manual install)
 
 :::note
