Undo global component: AutoHostendpointsMigrate

--- a/calico/operations/upgrading/openshift-upgrade.mdx
+++ b/calico/operations/upgrading/openshift-upgrade.mdx
@@ -2,6 +2,8 @@
 description: Upgrade to a newer version of Calico for OpenShift.
 ---
 
+import AutoHostendpointsMigrate from '@site/calico/_includes/components/AutoHostEndpointsMigrate';
+
 # Upgrade Calico on OpenShift 4
 
 ## About upgrading {{prodname}}
