--- a/calico_versioned_docs/version-3.26/operations/upgrading/openshift-upgrade.mdx
+++ b/calico_versioned_docs/version-3.26/operations/upgrading/openshift-upgrade.mdx
@@ -2,6 +2,7 @@
 description: Upgrade to a newer version of Calico for OpenShift.
 ---
 
+import AutoHostendpointsMigrate from '@site/calico_versioned_docs/version-3.26/_includes/components/AutoHostEndpointsMigrate';
 import HostEndpointsUpgrade from '@site/calico_versioned_docs/version-3.26/_includes/components/HostEndpointsUpgrade';
 
 # Upgrade Calico on OpenShift 4
