Undo global component: InstallAKS

--- a/calico-enterprise/multicluster/set-up-multi-cluster-management/standard-install/create-a-managed-cluster.mdx
+++ b/calico-enterprise/multicluster/set-up-multi-cluster-management/standard-install/create-a-managed-cluster.mdx
@@ -2,6 +2,8 @@
 description: Create a Calico Enterprise managed cluster that you can control from you management cluster.
 ---
 
+import InstallAKS from "@site/calico-enterprise/_includes/components/InstallAKS";
+
 # Create a Calico Enterprise managed cluster
 
 import Tabs from '@theme/Tabs';
