--- a/calico-enterprise_versioned_docs/version-3.20-1/multicluster/set-up-multi-cluster-management/standard-install/create-a-managed-cluster.mdx
+++ b/calico-enterprise_versioned_docs/version-3.20-1/multicluster/set-up-multi-cluster-management/standard-install/create-a-managed-cluster.mdx
@@ -2,10 +2,11 @@
 description: Create a Calico Enterprise managed cluster that you can control from you management cluster.
 ---
 
-# Create a Calico Enterprise managed cluster
-
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
+import InstallAKS from "@site/calico-enterprise_versioned_docs/version-3.20-1/_includes/components/InstallAKS";
+
+# Create a Calico Enterprise managed cluster
 
 ## Big picture
 
