--- a/calico-enterprise_versioned_docs/version-3.19-2/multicluster/set-up-multi-cluster-management/standard-install/create-a-managed-cluster.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/multicluster/set-up-multi-cluster-management/standard-install/create-a-managed-cluster.mdx
@@ -9,7 +9,7 @@ import TabItem from '@theme/TabItem';
 import InstallGenericTemp from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components-temp/InstallGeneric-temp';
 import InstallGKETemp from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components-temp/InstallGKE-temp';
 import InstallEKSTemp from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components-temp/InstallEKS-temp';
-import InstallAKSTemp from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components-temp/InstallAKS-temp';
+import InstallAKS from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components/InstallAKS';
 import InstallOpenShiftTemp from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components-temp/InstallOpenShift-temp';
 
 ## Big picture
@@ -55,7 +55,7 @@ Follow these steps in the cluster you intend to use as the managed cluster.
 </TabItem>
 <TabItem label="AKS" value="AKS-3">
 
-<InstallAKSTemp clusterType='managed' />
+<InstallAKS clusterType='managed' />
 
 </TabItem>
 <TabItem label="Openshift" value="Openshift-4">
