Undo global component: InstallEKS

--- a/calico-enterprise_versioned_docs/version-3.19-2/multicluster/set-up-multi-cluster-management/standard-install/create-a-managed-cluster.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/multicluster/set-up-multi-cluster-management/standard-install/create-a-managed-cluster.mdx
@@ -8,7 +8,7 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import InstallGenericTemp from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components-temp/InstallGeneric-temp';
 import InstallGKETemp from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components-temp/InstallGKE-temp';
-import InstallEKSTemp from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components-temp/InstallEKS-temp';
+import InstallEKS from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components/InstallEKS';
 import InstallAKS from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components/InstallAKS';
 import InstallOpenShiftTemp from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components-temp/InstallOpenShift-temp';
 
@@ -50,7 +50,7 @@ Follow these steps in the cluster you intend to use as the managed cluster.
 </TabItem>
 <TabItem label="EKS" value="EKS-2">
 
-<InstallEKSTemp clusterType='managed' />
+<InstallEKS clusterType='managed' />
 
 </TabItem>
 <TabItem label="AKS" value="AKS-3">
