--- a/calico-enterprise_versioned_docs/version-3.20-1/multicluster/set-up-multi-cluster-management/standard-install/create-a-managed-cluster.mdx
+++ b/calico-enterprise_versioned_docs/version-3.20-1/multicluster/set-up-multi-cluster-management/standard-install/create-a-managed-cluster.mdx
@@ -5,6 +5,7 @@ description: Create a Calico Enterprise managed cluster that you can control fro
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import InstallAKS from "@site/calico-enterprise_versioned_docs/version-3.20-1/_includes/components/InstallAKS";
+import InstallEKS from '@site/calico-enterprise_versioned_docs/version-3.20-1/_includes/components/InstallEKS';
 
 # Create a Calico Enterprise managed cluster
 
