Undo global component: InstallGeneric

--- a/calico-enterprise_versioned_docs/version-3.18-2/multicluster/set-up-multi-cluster-management/standard-install/create-a-managed-cluster.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/multicluster/set-up-multi-cluster-management/standard-install/create-a-managed-cluster.mdx
@@ -4,7 +4,7 @@ description: Create a Calico Enterprise managed cluster that you can control fro
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-import InstallGenericTemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/InstallGeneric-temp';
+import InstallGeneric from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components/InstallGeneric';
 import InstallGKETemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/InstallGKE-temp';
 import InstallEKS from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components/InstallEKS';
 import InstallAKS from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components/InstallAKS';
@@ -41,7 +41,7 @@ Follow these steps in the cluster you intend to use as the managed cluster.
 <Tabs>
 <TabItem label="Kubernetes" value="Kubernetes-0">
 
-<InstallGenericTemp clusterType='managed' />
+<InstallGeneric clusterType='managed' />
 
 </TabItem>
 <TabItem label="GKE" value="GKE-1">
