--- a/calico-enterprise/multicluster/set-up-multi-cluster-management/standard-install/create-a-managed-cluster.mdx
+++ b/calico-enterprise/multicluster/set-up-multi-cluster-management/standard-install/create-a-managed-cluster.mdx
@@ -3,6 +3,7 @@ description: Create a Calico Enterprise managed cluster that you can control fro
 ---
 
 import InstallAKS from "@site/calico-enterprise/_includes/components/InstallAKS";
+import InstallGeneric from '@site/calico-enterprise/_includes/components/InstallGeneric';
 
 # Create a Calico Enterprise managed cluster
 
