Undo global component: InstallGKE

--- a/calico-enterprise_versioned_docs/version-3.17/multicluster/create-a-managed-cluster.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/multicluster/create-a-managed-cluster.mdx
@@ -5,6 +5,7 @@ description: Create a Calico Enterprise managed cluster that you can control fro
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import InstallAKS from "@site/calico-enterprise_versioned_docs/version-3.17/_includes/components/InstallAKS";
+import InstallGKE from "@site/calico-enterprise_versioned_docs/version-3.17/_includes/components/InstallGKE";
 import InstallGeneric from '@site/calico-enterprise_versioned_docs/version-3.17/_includes/components/InstallGeneric';
 
 # Create and configure a managed cluster
