--- a/calico-enterprise_versioned_docs/version-3.18-2/multicluster/set-up-multi-cluster-management/standard-install/create-a-managed-cluster.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/multicluster/set-up-multi-cluster-management/standard-install/create-a-managed-cluster.mdx
@@ -5,7 +5,7 @@ description: Create a Calico Enterprise managed cluster that you can control fro
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import InstallGeneric from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components/InstallGeneric';
-import InstallGKETemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/InstallGKE-temp';
+import InstallGKE from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components/InstallGKE';
 import InstallEKS from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components/InstallEKS';
 import InstallAKS from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components/InstallAKS';
 import InstallOpenShiftTemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/InstallOpenShift-temp';
@@ -46,7 +46,7 @@ Follow these steps in the cluster you intend to use as the managed cluster.
 </TabItem>
 <TabItem label="GKE" value="GKE-1">
 
-<InstallGKETemp clusterType='managed' />
+<InstallGKE clusterType='managed' />
 
 </TabItem>
 <TabItem label="EKS" value="EKS-2">
