Undo global component: UpdateOperatorSimple

--- a/calico-enterprise/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee/standard.mdx
+++ b/calico-enterprise/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee/standard.mdx
@@ -1,8 +1,10 @@
 ---
 description: Steps to upgrade from open source Calico to Calico Enterprise.
 ---
+
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
+import UpgradeOperatorSimple from '@site/calico-enteprise/_includes/components/UpgradeOperatorSimple';
 
 # Upgrade from Calico to Calico Enterprise
 
