--- a/calico-enterprise/getting-started/install-on-clusters/openshift/installation.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/openshift/installation.mdx
@@ -2,6 +2,7 @@
 description: Install Calico Enterprise on an OpenShift 4 cluster.
 ---
 
+import InstallOpenShift from '@site/calico-enterprise/_includes/components/InstallOpenShift';
 import InstallOpenshiftBeforeYouBegin from '@site/calico-enterprise/_includes/components/InstallOpenshiftBeforeYouBegin';
 
 # Install Calico Enterprise on OpenShift
