--- a/calico-enterprise/multicluster/set-up-multi-cluster-management/standard-install/create-a-managed-cluster.mdx
+++ b/calico-enterprise/multicluster/set-up-multi-cluster-management/standard-install/create-a-managed-cluster.mdx
@@ -2,14 +2,14 @@
 description: Create a Calico Enterprise managed cluster that you can control from you management cluster.
 ---
 
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 import InstallAKS from "@site/calico-enterprise/_includes/components/InstallAKS";
 import InstallGKE from '@site/calico-enterprise/_includes/components/InstallGKE';
 import InstallGeneric from '@site/calico-enterprise/_includes/components/InstallGeneric';
+import InstallOpenShift from '@site/calico-enterprise/_includes/components/InstallOpenShift';
 
 # Create a Calico Enterprise managed cluster
-
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
 
 ## Big picture
 
