--- a/calico-enterprise_versioned_docs/version-3.17/multicluster/create-a-managed-cluster.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/multicluster/create-a-managed-cluster.mdx
@@ -7,6 +7,7 @@ import TabItem from '@theme/TabItem';
 import InstallAKS from "@site/calico-enterprise_versioned_docs/version-3.17/_includes/components/InstallAKS";
 import InstallGKE from "@site/calico-enterprise_versioned_docs/version-3.17/_includes/components/InstallGKE";
 import InstallGeneric from '@site/calico-enterprise_versioned_docs/version-3.17/_includes/components/InstallGeneric';
+import InstallOpenShift from '@site/calico-enterprise_versioned_docs/version-3.17/_includes/components/InstallOpenShift';
 
 # Create and configure a managed cluster
 
