--- a/calico-enterprise_versioned_docs/version-3.18-2/getting-started/install-on-clusters/openshift/installation.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/getting-started/install-on-clusters/openshift/installation.mdx
@@ -3,7 +3,7 @@ description: Install Calico Enterprise on an OpenShift 4 cluster.
 ---
 
 import InstallOpenshiftBeforeYouBegin from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components/InstallOpenshiftBeforeYouBegin';
-import InstallOpenShiftTemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/InstallOpenShift-temp';
+import InstallOpenShift from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components/InstallOpenShift';
 
 # Install Calico Enterprise on OpenShift
 
@@ -28,7 +28,7 @@ This guide augments the applicable steps in the [OpenShift documentation](https:
 1. [Create a storage class](#create-a-storage-class)
 1. [Install the {{prodname}} license](#install-the-calico-enterprise-license)
 
-<InstallOpenShiftTemp clusterType='standalone' />
+<InstallOpenShift clusterType='standalone' />
 
 ## Next steps
 
