--- a/calico-enterprise_versioned_docs/version-3.19-2/getting-started/install-on-clusters/windows-calico/manual-install/openshift-installation.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/getting-started/install-on-clusters/windows-calico/manual-install/openshift-installation.mdx
@@ -3,7 +3,7 @@ description: Install Calico Enterprise on an OpenShift 4 cluster on Windows node
 ---
 
 import InstallOpenshiftBeforeYouBegin from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components/InstallOpenshiftBeforeYouBegin';
-import InstallOpenShiftTemp from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components-temp/InstallOpenShift-temp';
+import InstallOpenShift from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components/InstallOpenShift';
 
 # Calico Enterprise for Windows on an OpenShift 4 cluster (manual install)
 
@@ -45,7 +45,7 @@ Augments the applicable steps in the [OpenShift documentation](https://cloud.red
 1. [Install {{prodnameWindows}}](#install-calico-enterprise-for-windows)
 1. [Configure kubelet](#configure-kubelet)
 
-<InstallOpenShiftTemp
+<InstallOpenShift
   clusterType='standalone'
   clusterOS='hybrid'
 />
