--- a/calico-enterprise_versioned_docs/version-3.19-2/multicluster/set-up-multi-cluster-management/standard-install/create-a-managed-cluster.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/multicluster/set-up-multi-cluster-management/standard-install/create-a-managed-cluster.mdx
@@ -10,7 +10,7 @@ import InstallGeneric from '@site/calico-enterprise_versioned_docs/version-3.19-
 import InstallGKE from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components/InstallGKE';
 import InstallEKS from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components/InstallEKS';
 import InstallAKS from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components/InstallAKS';
-import InstallOpenShiftTemp from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components-temp/InstallOpenShift-temp';
+import InstallOpenShift from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components/InstallOpenShift';
 
 ## Big picture
 
@@ -60,7 +60,7 @@ Follow these steps in the cluster you intend to use as the managed cluster.
 </TabItem>
 <TabItem label="Openshift" value="Openshift-4">
 
-<InstallOpenShiftTemp clusterType='managed' />
+<InstallOpenShift clusterType='managed' />
 
 </TabItem>
 
