--- a/calico-enterprise_versioned_docs/version-3.20-1/multicluster/set-up-multi-cluster-management/standard-install/create-a-managed-cluster.mdx
+++ b/calico-enterprise_versioned_docs/version-3.20-1/multicluster/set-up-multi-cluster-management/standard-install/create-a-managed-cluster.mdx
@@ -8,6 +8,7 @@ import InstallAKS from "@site/calico-enterprise_versioned_docs/version-3.20-1/_i
 import InstallEKS from '@site/calico-enterprise_versioned_docs/version-3.20-1/_includes/components/InstallEKS';
 import InstallGKE from "@site/calico-enterprise_versioned_docs/version-3.20-1/_includes/components/InstallGKE";
 import InstallGeneric from '@site/calico-enterprise_versioned_docs/version-3.20-1/_includes/components/InstallGeneric';
+import InstallOpenShift from '@site/calico-enterprise_versioned_docs/version-3.20-1/_includes/components/InstallOpenShift';
 
 # Create a Calico Enterprise managed cluster
 
