Undo global component: InstallOpenShiftManifests

--- a/calico-enterprise/getting-started/install-on-clusters/openshift/installation.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/openshift/installation.mdx
@@ -7,7 +7,7 @@ import InstallOpenshiftBeforeYouBegin from '@site/calico-enterprise/_includes/co
 
 # Install Calico Enterprise on OpenShift
 
-import InstallOpenShiftManifests from '@site/calico-enterprise/_includes/components/InstallOpenShiftManifests.js';
+import InstallOpenShiftManifests from '@site/calico-enterprise/_includes/components/InstallOpenShiftManifests';
 
 ## Big picture
 
