--- a/calico-enterprise/getting-started/upgrading/upgrading-enterprise/openshift-upgrade.mdx
+++ b/calico-enterprise/getting-started/upgrading/upgrading-enterprise/openshift-upgrade.mdx
@@ -2,6 +2,7 @@
 description: Upgrade to a newer version of Calico Enterprise installed with OpenShift.
 ---
 
+import InstallOpenShiftManifests from '@site/calico-enterprise/_includes/components/InstallOpenShiftManifests';
 import OpenShiftPrometheusOperator from '@site/calico-enterprise/_includes/components/OpenShiftPrometheusOperator';
 
 # Upgrade Calico Enterprise installed with OpenShift
