--- a/calico-enterprise_versioned_docs/version-3.20-1/getting-started/install-on-clusters/openshift/installation.mdx
+++ b/calico-enterprise_versioned_docs/version-3.20-1/getting-started/install-on-clusters/openshift/installation.mdx
@@ -7,7 +7,7 @@ import InstallOpenshiftBeforeYouBegin from '@site/calico-enterprise_versioned_do
 
 # Install Calico Enterprise on OpenShift
 
-import InstallOpenShiftManifests from '@site/calico-enterprise_versioned_docs/version-3.20-1/_includes/components/InstallOpenShiftManifests.js';
+import InstallOpenShiftManifests from '@site/calico-enterprise_versioned_docs/version-3.20-1/_includes/components/InstallOpenShiftManifests';
 
 ## Big picture
 
