--- a/calico-enterprise/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee-openshift.mdx
+++ b/calico-enterprise/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee-openshift.mdx
@@ -2,6 +2,7 @@
 description: Steps to upgrade from open source Calico to Calico Enterprise on OpenShift.
 ---
 
+import InstallOpenShiftManifests from '@site/calico-enterprise/_includes/components/InstallOpenShiftManifests';
 import OpenShiftPrometheusOperator from '@site/calico-enterprise/_includes/components/OpenShiftPrometheusOperator';
 import OpenShiftPullSecret from '@site/calico-enterprise/_includes/components/OpenShiftPullSecret';
 
