--- a/calico-enterprise_versioned_docs/version-3.20-1/getting-started/upgrading/upgrading-enterprise/openshift-upgrade.mdx
+++ b/calico-enterprise_versioned_docs/version-3.20-1/getting-started/upgrading/upgrading-enterprise/openshift-upgrade.mdx
@@ -2,6 +2,7 @@
 description: Upgrade to a newer version of Calico Enterprise installed with OpenShift.
 ---
 
+import InstallOpenShiftManifests from '@site/calico-enterprise_versioned_docs/version-3.20-1/_includes/components/InstallOpenShiftManifests';
 import OpenShiftPrometheusOperator from '@site/calico-enterprise_versioned_docs/version-3.20-1/_includes/components/OpenShiftPrometheusOperator';
 
 # Upgrade Calico Enterprise installed with OpenShift
