--- a/calico_versioned_docs/version-3.28/operations/upgrading/openshift-upgrade.mdx
+++ b/calico_versioned_docs/version-3.28/operations/upgrading/openshift-upgrade.mdx
@@ -3,6 +3,7 @@ description: Upgrade to a newer version of Calico for OpenShift.
 ---
 
 import AutoHostendpointsMigrate from '@site/calico_versioned_docs/version-3.28/_includes/components/AutoHostEndpointsMigrate';
+import InstallOpenShiftManifests from '@site/calico_versioned_docs/version-3.28/_includes/components/InstallOpenShiftManifests';
 
 # Upgrade Calico on OpenShift 4
 
