--- a/calico-enterprise_versioned_docs/version-3.17/multicluster/create-a-managed-cluster.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/multicluster/create-a-managed-cluster.mdx
@@ -6,6 +6,7 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import InstallAKS from "@site/calico-enterprise_versioned_docs/version-3.17/_includes/components/InstallAKS";
 import InstallGKE from "@site/calico-enterprise_versioned_docs/version-3.17/_includes/components/InstallGKE";
+import InstallEKS from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components/InstallEKS';
 import InstallGeneric from '@site/calico-enterprise_versioned_docs/version-3.17/_includes/components/InstallGeneric';
 import InstallOpenShift from '@site/calico-enterprise_versioned_docs/version-3.17/_includes/components/InstallOpenShift';
 
