--- a/calico-enterprise/getting-started/install-on-clusters/windows-calico/manual-install/openshift-installation.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/windows-calico/manual-install/openshift-installation.mdx
@@ -2,6 +2,7 @@
 description: Install Calico Enterprise on an OpenShift 4 cluster on Windows nodes
 ---
 
+import InstallOpenShift from '@site/calico-enterprise/_includes/components/InstallOpenShift';
 import InstallOpenshiftBeforeYouBegin from '@site/calico-enterprise/_includes/components/InstallOpenshiftBeforeYouBegin';
 
 # Calico Enterprise for Windows on an OpenShift 4 cluster (manual install)
