--- a/calico-enterprise_versioned_docs/version-3.18-2/getting-started/install-on-clusters/aks.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/getting-started/install-on-clusters/aks.mdx
@@ -2,7 +2,7 @@
 description: Install Calico Enterprise for an AKS cluster.
 ---
 
-import InstallAKS from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components/InstallAKS.js';
+import InstallAKS from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components/InstallAKS';
 
 # Microsoft Azure Kubernetes Service (AKS)
 
