--- a/calico_versioned_docs/version-3.26/getting-started/kubernetes/managed-public-cloud/eks.mdx
+++ b/calico_versioned_docs/version-3.26/getting-started/kubernetes/managed-public-cloud/eks.mdx
@@ -17,16 +17,6 @@ EKS has built-in support for {{prodname}}, providing a robust implementation of 
 
 You can also use {{prodname}} for networking on EKS in place of the default AWS VPC networking without the need to use IP addresses from the underlying VPC. This allows you to take advantage of the full set of {{prodname}} networking features, including {{prodname}}'s flexible IP address management capabilities.
 
-## Before you begin...
-
-:::note
-
-{{prodname}} makes use of the Kubernetes Container Storage Interface (CSI) to support various types of volumes. The necessary drivers required for CSI
-to function correctly in EKS clusters will no longer be present by default in clusters running Kubernetes 1.23. Please see the following link to ensure your cluster
-is configured correctly based on the version of Kubernetes being used in your cluster: [AWS EBS CSI driver](https://docs.aws.amazon.com/eks/latest/userguide/ebs-csi.html)
-
-:::
-
 ## How to
 
 ### Install EKS with Amazon VPC networking
@@ -43,6 +33,10 @@ The geeky details of what you get:
 When using the Amazon VPC CNI plugin, {{prodname}} does not support enforcement of network policy on IPv6 pods with `ENABLE_V4_EGRESS` set to `true`.
 
 :::
+
+***Prerequisites***
+
+* You [disabled network policy for the AWS VPC CNI](https://docs.aws.amazon.com/eks/latest/userguide/network-policy-disable.html). 
 
 1. First, create an Amazon EKS cluster.
 
