--- a/calico-enterprise_versioned_docs/version-3.20-1/getting-started/install-on-clusters/eks.mdx
+++ b/calico-enterprise_versioned_docs/version-3.20-1/getting-started/install-on-clusters/eks.mdx
@@ -32,13 +32,11 @@ Install {{prodname}} on an EKS managed Kubernetes cluster.
 
 **Required**
 
-- A [compatible EKS cluster](../compatibility.mdx#eks)
-
-- Cluster meets [system requirements](requirements.mdx)
-
-- A [Tigera license key and credentials](calico-enterprise.mdx)
-
-- [Install kubectl](https://kubernetes.io/docs/tasks/tools/install-kubectl/)
+* You have a [compatible EKS cluster](../compatibility.mdx#eks).
+* Your cluster meets the [system requirements](requirements.mdx).
+* You [disabled network policy for the AWS VPC CNI](https://docs.aws.amazon.com/eks/latest/userguide/network-policy-disable.html).
+* You have a [Tigera license key and credentials](calico-enterprise.mdx).
+* You [installed kubectl](https://kubernetes.io/docs/tasks/tools/install-kubectl/) on your workstation.
 
 ## How to
 
