--- a/calico-enterprise_versioned_docs/version-3.19-2/getting-started/upgrading/upgrading-enterprise/openshift-upgrade.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/getting-started/upgrading/upgrading-enterprise/openshift-upgrade.mdx
@@ -149,6 +149,18 @@ The steps differ based on your cluster type. If you are unsure of your cluster t
    EOF
    ```
 
+1. Remove deprecated fields from the [Manager](../../../reference/installation/api.mdx#operator.tigera.io/v1.Manager).
+
+```bash
+oc apply -f - <<EOF
+apiVersion: operator.tigera.io/v1
+kind: Manager
+metadata:
+  name: tigera-secure
+EOF
+   ```
+
+
 1. You can now monitor the upgrade progress with the following command:
 
    ```bash
