--- a/calico-cloud/get-started/connect/install-helm.mdx
+++ b/calico-cloud/get-started/connect/install-helm.mdx
@@ -34,9 +34,9 @@ With Helm installations you can also set optional installation parameters to ena
    | Feature | Key | Values |
    |---------|-----|--------|
    | Image Assurance | `installer.components.imageAssurance.state` | `Enabled` (default), `Disabled` |
-   | Container Threat Detection | `installer.components.runtimeSecurity.state` | `Enabled`, `Disabled` (default*) <br/> * The default for new clusters is `Disabled`. For upgrades for previously connected clusters, the default will retain the previous state.|
+   | Container Threat Detection | `installer.components.runtimeSecurity.state` | `Enabled`, `Disabled` (default\*) <br/> * The default for new clusters is `Disabled`. For upgrades for previously connected clusters, the default will retain the previous state. |
    | Security Posture Dashboard | `installer.components.securityPosture.state` | `Enabled` (default), `Disabled` |
-   | Packet Capture | `installer.components.packetCaptureAPI.state` |  `Enabled`, `Disabled` (default*) <br/> * The default for new clusters is `Disabled`. For upgrades for previously connected clusters, the default will retain the previous state.|
+   | Packet Capture | `installer.components.packetCaptureAPI.state` |  `Enabled`, `Disabled` (default\*) <br/> * The default for new clusters is `Disabled`. For upgrades for previously connected clusters, the default will retain the previous state. |
    | Compliance Reports | `installer.components.compliance.enabled` | `true` (default), `false` |
 
 
