--- a/calico-cloud_versioned_docs/version-19-2/get-started/connect/install-automated.mdx
+++ b/calico-cloud_versioned_docs/version-19-2/get-started/connect/install-automated.mdx
@@ -12,7 +12,7 @@ You can connect clusters to Calico Cloud as part of an automated workflow.
 To do this, you must generate a persistent set of client credentials to use while interacting with the Calico Cloud API.
 Using these credentials with standard kubectl and Helm installations lets you fully automate the cluster connection process.
 
-## Prerequisties
+## Prerequisites
 
 * You have an active Calico Cloud account. You can sign up for a 14-day free trial at [calicocloud.io](https://calicocloud.io).
 * You are signed in to the Calico Cloud Manager UI as a user with the **Owner** or **Admin**, role.
