Added a release note for MKE with eBPF support.

--- a/calico-enterprise_versioned_docs/version-3.19-2/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/release-notes/index.mdx
@@ -190,6 +190,7 @@ This release includes bug fixes and improvements.
 * Updates the default behaviour of list request without tier field selector or label selector on globalnetworkpolicy, stagedglobalnetworkpolicy, networkpolicy and staged network policy to return all policies available to user, instead of returning only the policies in the default tier. This change allows to manage policies with GitOps tools like ArgoCD.
 * Fix Felix panic when using non-default BPF map sizes. Size was not updated in all places resulting in failure to attach programs.
 * Fix dual ToR startup when using bgp-layout ConfigMap to assign AS numbers.
+* Added support for eBPF on MKE.
 * Security updates.
 
 To update an existing installation of Calico Enterprise 3.19, see [Install a patch release](../getting-started/manifest-archive.mdx).
