variables fixes for calico ent versioned docs

--- a/calico-enterprise_versioned_docs/version-3.17/reference/resources/networkpolicy.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/reference/resources/networkpolicy.mdx
@@ -22,7 +22,7 @@ import Icmp from '@site/calico-enterprise_versioned_docs/version-3.17/_includes/
 
 import Rule from '@site/calico-enterprise_versioned_docs/version-3.17/_includes/content/_rule.mdx';
 
-import Httpmatch from '@site/calico/_includes/content/_httpmatch.mdx';
+import Httpmatch from '@site/calico-enterprise_versioned_docs/version-3.17/_includes/content/_httpmatch.mdx';
 
 A network policy resource (`NetworkPolicy`) represents an ordered set of rules which are applied
 to a collection of endpoints that match a [label selector](#selector).
