variables fixes for calico ent versioned docs

--- a/calico-enterprise_versioned_docs/version-3.18-2/getting-started/install-on-clusters/kubernetes/generic-install.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/getting-started/install-on-clusters/kubernetes/generic-install.mdx
@@ -4,8 +4,6 @@ description: Install Calico Enterprise on a kubeadm-provisioned Kubernetes clust
 
 import variables from '@site/calico-enterprise_versioned_docs/version-3.18-2/variables';
 
-import InstallGenericTemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/InstallGeneric-temp';
-
 # Standard
 
 ## Big picture
@@ -36,7 +34,7 @@ The geeky details of what you get:
 - [Install {variables.prodname}](#install-calico-enterprise)
 - [Install {variables.prodname} license](#install-calico-enterprise-license)
 
-<InstallGenericTemp clusterType='standalone' />
+<InstallGeneric clusterType='standalone' />
 
 ## Next steps
 
