--- a/calico-enterprise_versioned_docs/version-3.19-2/getting-started/install-on-clusters/eks.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/getting-started/install-on-clusters/eks.mdx
@@ -4,8 +4,6 @@ description: Enable Calico network policy in EKS.
 
 import variables from '@site/calico-enterprise_versioned_docs/version-3.19-2/variables';
 
-import InstallEKSTemp from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components-temp/InstallEKS-temp.js';
-
 # Amazon Elastic Kubernetes Service (EKS)
 
 ## Big picture
@@ -50,7 +48,7 @@ Install {variables.prodname} on an EKS managed Kubernetes cluster.
 1. [Option B: Install with Calico CNI networking](#install-eks-with-calico-networking)
 1. [Install the {variables.prodname} license](#install-the-calico-enterprise-license)
 
-<InstallEKSTemp clusterType='standalone' />
+<InstallEKS clusterType='standalone' />
 
 ## Next steps
 
