--- a/calico-enterprise_versioned_docs/version-3.19-2/getting-started/install-on-clusters/windows-calico/manual-install/openshift-installation.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/getting-started/install-on-clusters/windows-calico/manual-install/openshift-installation.mdx
@@ -4,9 +4,6 @@ description: Install Calico Enterprise on an OpenShift 4 cluster on Windows node
 
 import variables from '@site/calico-enterprise_versioned_docs/version-3.19-2/variables';
 
-import InstallOpenshiftBeforeYouBeginTemp from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components-temp/InstallOpenshiftBeforeYouBegin-temp';
-import InstallOpenShiftTemp from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components-temp/InstallOpenShift-temp';
-
 # Calico Enterprise for Windows on an OpenShift 4 cluster (manual install)
 
 :::note
@@ -29,7 +26,7 @@ Augments the applicable steps in the [OpenShift documentation](https://cloud.red
 
 ## Before you begin
 
-<InstallOpenshiftBeforeYouBeginTemp clusterOS='hybrid' />
+<InstallOpenshiftBeforeYouBegin clusterOS='hybrid' />
 
 ## How to
 
@@ -47,7 +44,7 @@ Augments the applicable steps in the [OpenShift documentation](https://cloud.red
 1. [Install {variables.prodnameWindows}](#install-calico-enterprise-for-windows)
 1. [Configure kubelet](#configure-kubelet)
 
-<InstallOpenShiftTemp
+<InstallOpenShift
   clusterType='standalone'
   clusterOS='hybrid'
 />
