--- a/calico-enterprise_versioned_docs/version-3.18-2/getting-started/install-on-clusters/aks.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/getting-started/install-on-clusters/aks.mdx
@@ -4,8 +4,6 @@ description: Install Calico Enterprise for an AKS cluster.
 
 import variables from '@site/calico-enterprise_versioned_docs/version-3.18-2/variables';
 
-import InstallAKSTemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/InstallAKS-temp.js';
-
 # Microsoft Azure Kubernetes Service (AKS)
 
 ## Big picture
@@ -78,7 +76,7 @@ Install {variables.prodname} on an AKS managed Kubernetes cluster.
 1. [Option B: Install with Calico networking](#install-with-calico-enterprise-networking)
 1. [Install the {variables.prodname} license](#install-the-calico-enterprise-license)
 
-<InstallAKSTemp clusterType='standalone' />
+<InstallAKS clusterType='standalone' />
 
 ## Next steps
 
