--- a/calico-enterprise_versioned_docs/version-3.18-2/getting-started/install-on-clusters/tkg.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/getting-started/install-on-clusters/tkg.mdx
@@ -4,8 +4,6 @@ description: Install Calico Enterprise on Tanzu Kubernetes Grid.
 
 import variables from '@site/calico-enterprise_versioned_docs/version-3.18-2/variables';
 
-import InstallGenericTemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/InstallGeneric-temp';
-
 # Tanzu Kubernetes Grid (TKG)
 
 ## Big picture
@@ -44,7 +42,7 @@ The geeky details of what you get:
 - [Install {variables.prodname}](#install-calico-enterprise)
 - [Install {variables.prodname} license](#install-calico-enterprise-license)
 
-<InstallGenericTemp clusterType='standalone' />
+<InstallGeneric clusterType='standalone' />
 
 ## Next steps
 
