--- a/calico-enterprise_versioned_docs/version-3.18-2/getting-started/manifest-archive.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/getting-started/manifest-archive.mdx
@@ -8,7 +8,6 @@ import variables from '@site/calico-enterprise_versioned_docs/version-3.18-2/var
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-import ReleaseArchiveTableTemp from "@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/ReleaseArchiveTable-temp";
 
 Installing the most recent patch version of {variables.prodname} {variables.version} ensures that you have the latest bug fixes and improvements.
 But you can always install, or downgrade to, a previous patch version.
@@ -25,7 +24,7 @@ This feature is:
 
 1. Download the release archive for your patch version from the following table:
 
-   <ReleaseArchiveTableTemp/>
+   <ReleaseArchiveTable/>
 
 1. Untar the **release-vx.y.z-vx.y.z.tgz** to a local directory.
 
