--- a/calico-enterprise_versioned_docs/version-3.18-2/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee-openshift.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee-openshift.mdx
@@ -5,10 +5,6 @@ description: Steps to upgrade from open source Calico to Calico Enterprise on Op
 import variables from '@site/calico-enterprise_versioned_docs/version-3.18-2/variables';
 import CodeBlock from '@theme/CodeBlock';
 
-import InstallOpenShiftManifestsTemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/InstallOpenShiftManifests-temp';
-import OpenShiftPullSecretTemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/OpenShiftPullSecret-temp';
-import OpenShiftPrometheusOperatorTemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/OpenShiftPrometheusOperator-temp';
-
 # Upgrade from Calico to Calico Enterprise on OpenShift
 
 ## Prerequisites
@@ -45,11 +41,11 @@ Make the manifests directory.
 mkdir manifests
 ```
 
-<InstallOpenShiftManifestsTemp upgradeFrom='OpenSource' />
+<InstallOpenShiftManifests upgradeFrom='OpenSource' />
 
 **Add an image pull secret**
 
-<OpenShiftPullSecretTemp />
+<OpenShiftPullSecret />
 
 > (Optional) If your cluster architecture requires any custom [{variables.prodname} resources](../../../reference/resources/index.mdx) to function at startup, install them now using [calicoctl](../../../reference/clis/calicoctl/overview.mdx).
 
@@ -97,7 +93,7 @@ Install the {variables.prodname} license provided to you by Tigera.
 oc create -f </path/to/license.yaml>
 ```
 
-<OpenShiftPrometheusOperatorTemp upgradeFrom='OpenSource' />
+<OpenShiftPrometheusOperator upgradeFrom='OpenSource' />
 
 You can now monitor progress with the following command:
 
