--- a/calico-enterprise_versioned_docs/version-3.18-2/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee/standard.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee/standard.mdx
@@ -3,8 +3,6 @@ description: Steps to upgrade from open source Calico to Calico Enterprise.
 ---
 
 import variables from '@site/calico-enterprise_versioned_docs/version-3.18-2/variables';
-
-import UpgradeOperatorSimpleTemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/UpgradeOperatorSimple-temp';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
@@ -46,12 +44,12 @@ GKE upgrades from open source Calico are not currently supported.
 <Tabs>
 <TabItem label="Kubernetes" value="Kubernetes-0">
 
-<UpgradeOperatorSimpleTemp upgradeFrom='OpenSource' />
+<UpgradeOperatorSimple upgradeFrom='OpenSource' />
 
 </TabItem>
 <TabItem label="EKS" value="EKS-1">
 
-<UpgradeOperatorSimpleTemp
+<UpgradeOperatorSimple
   upgradeFrom='OpenSource'
   provider='EKS'
 />
@@ -67,7 +65,7 @@ The following instructions are only for AKS clusters that use a Kubernetes recon
 
 These upgrade instructions will upgrade your AKS clusters with Azure CNI and an AKS-managed Calico installation.
 
-<UpgradeOperatorSimpleTemp
+<UpgradeOperatorSimple
   upgradeFrom='OpenSource'
   provider='AKS'
 />
