--- a/calico-enterprise_versioned_docs/version-3.18-2/getting-started/upgrading/upgrading-enterprise/kubernetes-upgrade-tsee/operator.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/getting-started/upgrading/upgrading-enterprise/kubernetes-upgrade-tsee/operator.mdx
@@ -6,7 +6,6 @@ import variables from '@site/calico-enterprise_versioned_docs/version-3.18-2/var
 
 # Upgrade Calico Enterprise installed with the operator
 
-import UpgradeOperatorSimpleTemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/UpgradeOperatorSimple-temp.js';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
@@ -76,7 +75,7 @@ These steps differ based on your cluster type. If you are unsure of your cluster
 <Tabs>
 <TabItem label="Kubernetes" value="Kubernetes-0">
 
-<UpgradeOperatorSimpleTemp upgradeFrom='Enterprise' />
+<UpgradeOperatorSimple upgradeFrom='Enterprise' />
 
 </TabItem>
 <TabItem label="AKS" value="AKS-1">
@@ -98,7 +97,7 @@ kubectl get configmap -n calico-system active-operator -oyaml | grep active-name
 If the `active-namespace` is `tigera-operator-enterprise`, then the cluster was
 upgraded from Calico.
 
-<UpgradeOperatorSimpleTemp
+<UpgradeOperatorSimple
   upgradeFrom='Enterprise'
   provider='AKS'
 />
