--- a/calico-enterprise_versioned_docs/version-3.18-2/multicluster/set-up-multi-cluster-management/standard-install/create-a-managed-cluster.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/multicluster/set-up-multi-cluster-management/standard-install/create-a-managed-cluster.mdx
@@ -6,12 +6,6 @@ import variables from '@site/calico-enterprise_versioned_docs/version-3.18-2/var
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-import InstallGenericTemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/InstallGeneric-temp';
-import InstallGKETemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/InstallGKE-temp';
-import InstallEKSTemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/InstallEKS-temp';
-import InstallAKSTemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/InstallAKS-temp';
-import InstallOpenShiftTemp from '@site/calico-enterprise_versioned_docs/version-3.18-2/_includes/components-temp/InstallOpenShift-temp';
-
 
 # Create a Calico Enterprise managed cluster
 
@@ -43,27 +37,27 @@ Follow these steps in the cluster you intend to use as the managed cluster.
 <Tabs>
 <TabItem label="Kubernetes" value="Kubernetes-0">
 
-<InstallGenericTemp clusterType='managed' />
+<InstallGeneric clusterType='managed' />
 
 </TabItem>
 <TabItem label="GKE" value="GKE-1">
 
-<InstallGKETemp clusterType='managed' />
+<InstallGKE clusterType='managed' />
 
 </TabItem>
 <TabItem label="EKS" value="EKS-2">
 
-<InstallEKSTemp clusterType='managed' />
+<InstallEKS clusterType='managed' />
 
 </TabItem>
 <TabItem label="AKS" value="AKS-3">
 
-<InstallAKSTemp clusterType='managed' />
+<InstallAKS clusterType='managed' />
 
 </TabItem>
 <TabItem label="Openshift" value="Openshift-4">
 
-<InstallOpenShiftTemp clusterType='managed' />
+<InstallOpenShift clusterType='managed' />
 
 </TabItem>
 
