--- a/calico-enterprise_versioned_docs/version-3.19-2/getting-started/install-on-clusters/gke.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/getting-started/install-on-clusters/gke.mdx
@@ -4,8 +4,6 @@ description: Enable Calico network policy in GKE.
 
 import variables from '@site/calico-enterprise_versioned_docs/version-3.19-2/variables';
 
-import InstallGKETemp from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components-temp/InstallGKE-temp.js';
-
 # Google Kubernetes Engine (GKE)
 
 ## Big picture
@@ -60,7 +58,7 @@ The geeky details of what you get:
 1. [Install {variables.prodname}](#install-calico-enterprise)
 1. [Install the {variables.prodname} license](#install-the-calico-enterprise-license)
 
-<InstallGKETemp clusterType='standalone' />
+<InstallGKE clusterType='standalone' />
 
 ## Next steps
 
