--- a/calico-enterprise_versioned_docs/version-3.19-2/getting-started/install-on-clusters/openshift/installation.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/getting-started/install-on-clusters/openshift/installation.mdx
@@ -4,9 +4,6 @@ description: Install Calico Enterprise on an OpenShift 4 cluster.
 
 import variables from '@site/calico-enterprise_versioned_docs/version-3.19-2/variables';
 
-import InstallOpenshiftBeforeYouBeginTemp from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components-temp/InstallOpenshiftBeforeYouBegin-temp';
-import InstallOpenShiftTemp from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components-temp/InstallOpenShift-temp';
-
 # Install Calico Enterprise on OpenShift
 
 ## Big picture
@@ -17,7 +14,7 @@ This guide augments the applicable steps in the [OpenShift documentation](https:
 
 ## Before you begin
 
-<InstallOpenshiftBeforeYouBeginTemp />
+<InstallOpenshiftBeforeYouBegin />
 
 ## How to
 
@@ -30,7 +27,7 @@ This guide augments the applicable steps in the [OpenShift documentation](https:
 1. [Create a storage class](#create-a-storage-class)
 1. [Install the {variables.prodname} license](#install-the-calico-enterprise-license)
 
-<InstallOpenShiftTemp clusterType='standalone' />
+<InstallOpenShift clusterType='standalone' />
 
 ## Next steps
 
