--- a/calico-enterprise_versioned_docs/version-3.19-2/getting-started/install-on-clusters/windows-calico/operator.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/getting-started/install-on-clusters/windows-calico/operator.mdx
@@ -5,8 +5,6 @@ description: Install Calico Enterprise for Windows on a Kubernetes cluster for t
 import variables from '@site/calico-enterprise_versioned_docs/version-3.19-2/variables';
 import CodeBlock from '@theme/CodeBlock';
 
-import CalicoWindowsInstallTemp from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components-temp/CalicoWindowsInstall-temp';
-
 # Install using Operator
 
 import Tabs from '@theme/Tabs';
@@ -107,12 +105,12 @@ Before proceeding, take note of the configuration parameters in `{variables.root
 <Tabs>
 <TabItem label="Kubernetes VXLAN" value="Kubernetes VXLAN-4">
 
-<CalicoWindowsInstallTemp networkingType='vxlan' />
+<CalicoWindowsInstall networkingType='vxlan' />
 
 </TabItem>
 <TabItem label="Kubernetes BGP" value="Kubernetes BGP-5">
 
-<CalicoWindowsInstallTemp networkingType='windows-bgp' />
+<CalicoWindowsInstall networkingType='windows-bgp' />
 
 </TabItem>
 </Tabs>
