--- a/calico-enterprise_versioned_docs/version-3.19-2/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee/standard.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee/standard.mdx
@@ -6,7 +6,6 @@ import variables from '@site/calico-enterprise_versioned_docs/version-3.19-2/var
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-import UpgradeOperatorSimpleTemp from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components-temp/UpgradeOperatorSimple-temp';
 
 # Upgrade from Calico to Calico Enterprise
 
@@ -46,12 +45,12 @@ GKE upgrades from open source Calico are not currently supported.
 <Tabs>
 <TabItem label="Kubernetes" value="Kubernetes-0">
 
-<UpgradeOperatorSimpleTemp upgradeFrom='OpenSource' />
+<UpgradeOperatorSimple upgradeFrom='OpenSource' />
 
 </TabItem>
 <TabItem label="EKS" value="EKS-1">
 
-<UpgradeOperatorSimpleTemp
+<UpgradeOperatorSimple
   upgradeFrom='OpenSource'
   provider='EKS'
 />
@@ -67,7 +66,7 @@ The following instructions are only for AKS clusters that use a Kubernetes recon
 
 These upgrade instructions will upgrade your AKS clusters with Azure CNI and an AKS-managed Calico installation.
 
-<UpgradeOperatorSimpleTemp
+<UpgradeOperatorSimple
   upgradeFrom='OpenSource'
   provider='AKS'
 />
