--- a/calico-enterprise_versioned_docs/version-3.19-2/getting-started/upgrading/upgrading-enterprise/kubernetes-upgrade-tsee/operator.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/getting-started/upgrading/upgrading-enterprise/kubernetes-upgrade-tsee/operator.mdx
@@ -4,8 +4,6 @@ description: Upgrading from an earlier release of Calico Enterprise with the ope
 
 import variables from '@site/calico-enterprise_versioned_docs/version-3.19-2/variables';
 
-import UpgradeOperatorSimpleTemp from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components-temp/UpgradeOperatorSimple-temp.js';
-
 # Upgrade Calico Enterprise installed with the operator
 
 import Tabs from '@theme/Tabs';
@@ -89,7 +87,7 @@ These steps differ based on your cluster type. If you are unsure of your cluster
 <Tabs>
 <TabItem label="Kubernetes" value="Kubernetes-0">
 
-<UpgradeOperatorSimpleTemp upgradeFrom='Enterprise' />
+<UpgradeOperatorSimple upgradeFrom='Enterprise' />
 
 </TabItem>
 <TabItem label="AKS" value="AKS-1">
@@ -111,7 +109,7 @@ kubectl get configmap -n calico-system active-operator -oyaml | grep active-name
 If the `active-namespace` is `tigera-operator-enterprise`, then the cluster was
 upgraded from Calico.
 
-<UpgradeOperatorSimpleTemp
+<UpgradeOperatorSimple
   upgradeFrom='Enterprise'
   provider='AKS'
 />
