--- a/calico-enterprise_versioned_docs/version-3.19-2/_includes/content/_non-cluster-binary-install.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/_includes/content/_non-cluster-binary-install.mdx
@@ -13,7 +13,7 @@ This step requires Docker, but it can be run from any machine with Docker instal
 1. Use the following command to download the {{nodecontainer}} image.
 
    ```bash
-   docker pull {{registry}}%% component_image("cnx-node") %%
+   docker pull {{registry}}{{componentImageCnxNode}}
    ```
 
 1. Confirm that the image has loaded by typing `docker images`.
@@ -26,7 +26,7 @@ This step requires Docker, but it can be run from any machine with Docker instal
 1. Create a temporary {{nodecontainer}} container.
 
    ```bash
-   docker create --name container {{registry}}%% component_image("cnx-node") %%
+   docker create --name container {{registry}}{{componentImageCnxNode}}
    ```
 
 1. Copy the calico-node binary from the container to the local file system.
