--- a/calico-enterprise_versioned_docs/version-3.18-2/operations/clis/calicoq/installing.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/operations/clis/calicoq/installing.mdx
@@ -95,7 +95,7 @@ corresponds to your desired deployment.
    registry.
 
    ```bash
-   docker pull {{registry}}{{componentImageCalicoq}}
+   docker pull {{registry}}{{componentImage.calicoq}}
    ```
 
 1. Confirm that the image has loaded by typing `docker images`.
