--- a/calico-enterprise_versioned_docs/version-3.20-1/_includes/content/_docker-container-service.mdx
+++ b/calico-enterprise_versioned_docs/version-3.20-1/_includes/content/_docker-container-service.mdx
@@ -40,7 +40,7 @@ ExecStart=/usr/bin/docker run --net=host --privileged \
  -v /run/docker/plugins:/run/docker/plugins \
  -v /lib/modules:/lib/modules \
  -v /etc/pki:/pki \
- {{registry}}{{componentImageCnxNode}} /bin/calico-node -felix
+ {{registry}}{{componentImage.cnxNode}} /bin/calico-node -felix
 
 ExecStop=-/usr/bin/docker stop {{noderunning}}
 
