DOCS-2271: Changes to system requirements and pre-install procedure

--- a/calico-cloud_versioned_docs/version-19-2/get-started/connect/requirements/system-requirements.mdx
+++ b/calico-cloud_versioned_docs/version-19-2/get-started/connect/requirements/system-requirements.mdx
@@ -25,7 +25,7 @@ Verify that your cluster meets these requirements.
 
 {{prodname}} cannot be installed on clusters that are managed by any kind of Kubernetes reconciler (for example, Addon-manager). To verify, look for an annotation called `addonmanager.kubernetes.io/mode` on either of the following resources. (The resources may not exist).
 
-- `tigera-operator` deployment in the `tigera-operator` namespace (Installation on AKS may still work if the mode is Reconcile, see [AKS](aks.mdx#verify-addonmanager-is-compatible) for an additional check.)
+- `tigera-operator` deployment in the `tigera-operator` namespace
 - `calico-node` daemonset in the `kube-system` namespace
 
 If the following command finds addonmanager on either of the resources, then Addon-manager is being used. Find a different cluster to use.
