--- a/calico-cloud/get-started/install-cluster.mdx
+++ b/calico-cloud/get-started/install-cluster.mdx
@@ -1,6 +1,6 @@
 ---
 description: Steps to connect your cluster to Calico Cloud.
-title: Install
+title: Install Calico Cloud
 ---
 
 # Connect a cluster to Calico Cloud
