DOCS-2244: Publishes Calico Enterprise 3.19.2 (#1626)
Co-authored-by: sridhar <sridhar@tigera.io>
Co-authored-by: rene-dekker <rene@tigera.io>
Co-authored-by: tuti <tuti@tigera.io>

--- a/calico-enterprise_versioned_docs/version-3.19-2/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/release-notes/index.mdx
@@ -174,3 +174,23 @@ No other components have been changed.
   AKS began applying an image set to clusters with Kubernetes 1.29, and this change conflicted with operations performed by the Tigera Operator during migration.
   We fixed the issue by modifying how the Tigera Operator checks for image sets during migrations to Calico Enterprise.
 * Removed a mutual dependency between logstorage and other components that could result in a degraded TigeraStatus if certificates are missing required key usages.
+
+### Calico Enterprise 3.19.2 bug fix release
+
+August 30, 2024
+
+Calico Enterprise 3.19.2 is now available.
+This release includes bug fixes and improvements.
+
+#### Bug fixes
+
+* Fix that Felix would panic when trying to resync a temporary IP set.  Temporary IP sets are created in certain scenarios after previous failures.
+* Reduce lock contention between the process info cache and the flow logs collector.  Avoids slowing down the collector when the info cache is under update load.
+* Fix excessive CPU usage in the process name lookup cache if a PID was unknown.
+* Updates the default behaviour of list request without tier field selector or label selector on globalnetworkpolicy, stagedglobalnetworkpolicy, networkpolicy and staged network policy to return all policies available to user, instead of returning only the policies in the default tier. This change allows to manage policies with GitOps tools like ArgoCD.
+* Fix Felix panic when using non-default BPF map sizes. Size was not updated in all places resulting in failure to attach programs.
+* Fix dual ToR startup when using bgp-layout ConfigMap to assign AS numbers.
+* Added support for eBPF on MKE.
+* Security updates.
+
+To update an existing installation of Calico Enterprise 3.19, see [Install a patch release](../getting-started/manifest-archive.mdx).
