--- a/calico-cloud/networking/ipam/migrate-pools.mdx
+++ b/calico-cloud/networking/ipam/migrate-pools.mdx
@@ -44,20 +44,19 @@ If you follow these steps, existing pod connectivity will not be affected. (If y
 
 1. Add a new IP pool.
 
-:::note
+   :::note
 
-It is highly recommended that your Calico IP pools are within the Kubernetes cluster CIDR. If pods IPs are allocated
-from outside of the Kubernetes cluster CIDR, some traffic flows may have NAT applied unnecessarily causing unexpected behavior.
+   It is highly recommended that your Calico IP pools are within the Kubernetes cluster CIDR. If pods IPs are allocated from outside of the Kubernetes cluster CIDR, some traffic flows may have NAT applied unnecessarily causing unexpected behavior.
 
-:::
+   :::
 
 1. Disable the old IP pool.
 
-:::note
+   :::note
 
-Disabling an IP pool only prevents new IP address allocations; it does not affect the networking of existing pods.
+   Disabling an IP pool only prevents new IP address allocations; it does not affect the networking of existing pods.
 
-:::
+   :::
 
 1. Delete pods from the old IP pool. This includes any new pods that may have been created with the old IP pool prior to disabling the pool.
 
