Adds upgrade breaking change note to CE release notes

--- a/calico-enterprise_versioned_docs/version-3.19-2/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/release-notes/index.mdx
@@ -120,6 +120,18 @@ This release expands our support to clusters with nodes running ARM64-based arch
 <CodeBlock language='bash'>{`kubectl patch installation.tigera.io default --type=merge  -p '{"spec":{"kubeletVolumePluginPath":"/var/lib/kubelet"}}'`}</CodeBlock>
 </li>
 
+## Updating
+
+:::important
+
+{{prodname}} 3.19 contains breaking changes for installations that use the Calico API server.
+
+:::
+
+* ***Breaking change***: Upgrading from Calico Enterprise 3.18 or earlier {{prodname}} will alter the UID of all `projectcalico.org/v3` resources.
+  If you're using the Calico API server, you must restart any controllers, including `kube-controller-manager`, that manage these resources after the upgrade.
+  This change addresses an issue where duplicate UIDs on different API resources could disrupt Kubernetes garbage collection.
+
 ## Release details
 
 ### Calico Enterprise 3.19.0-1.0 (early preview)
