--- a/calico-enterprise_versioned_docs/version-3.20-1/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.20-1/release-notes/index.mdx
@@ -77,6 +77,18 @@ For more information, see [Packet capture](../visibility/packetcapture.mdx), [En
   <CodeBlock language='bash'>{`kubectl patch installation.tigera.io default --type=merge  -p '{"spec":{"kubeletVolumePluginPath":"/var/lib/kubelet"}}'`}</CodeBlock>
 </li>
 
+## Updating
+
+:::important
+
+{{prodname}} 3.20 contains breaking changes for installations that use the Calico API server.
+
+:::
+
+* ***Breaking change***: Upgrading from Calico Enterprise 3.18 or earlier {{prodname}} will alter the UID of all `projectcalico.org/v3` resources.
+  If you're using the Calico API server, you must restart any controllers, including `kube-controller-manager`, that manage these resources after the upgrade.
+  This change addresses an issue where duplicate UIDs on different API resources could disrupt Kubernetes garbage collection.
+
 ## Release details
 
 ### Calico Enterprise 3.20.0-1.0 (early preview)
