--- a/calico_versioned_docs/version-3.28/release-notes/index.mdx
+++ b/calico_versioned_docs/version-3.28/release-notes/index.mdx
@@ -7,13 +7,6 @@ title: Release notes
 
 Learn about the new features, bug fixes, and other updates in this release of {{prodname}}.
 
-:::info
-
-{{prodname}} 3.28 contains breaking changes for installations that use the Calico API server.
-See [Important upgrade notes](#important-upgrade-notes) for more information.
-
-:::
-
 ## New features and enhancements
 
 ### Configure multiple IP pools during installation
@@ -135,6 +128,23 @@ These improvements apply only when Calico is running in iptables mode.
 
 <!--## Known issues-->
 
+## Updating
+
+:::important
+
+{{prodname}} 3.28 contains breaking changes for installations that use the Calico API server.
+
+:::
+
+* ***Breaking change***: Upgrading {{prodname}} will alter the UID of all `projectcalico.org/v3` resources.
+  If you're using the Calico API server, you must restart any controllers, including `kube-controller-manager`, that manage these resources after the upgrade.
+  This change addresses an issue where duplicate UIDs on different API resources could disrupt Kubernetes garbage collection.
+  [calico #8586](https://github.com/projectcalico/calico/pull/8586) (@caseydavenport)
+* This release re-enables VXLAN checksum offload for kernels > 5.7 (this takes effect when nodes are restarted).
+  The offload was disabled in the past due to kernel bugs but has substantial performance impact.
+  We've been unable to find an environment where this needs to be disabled, so are re-enabling the offload with the intent of proving it works or finding a setup where it doesn't.
+  If you encounter problems after upgrading and restarting nodes, please let us know and set `ChecksumOffloadBroken=true` in the FelixConfiguration's `featureDetectOverride` field to restore the previous behavior.
+  [calico #8774](https://github.com/projectcalico/calico/pull/8774) (@tomastigera)
 
 ## Release details
 
@@ -147,17 +157,6 @@ Calico Open Source release 3.28.0 is now generally available.
 #### Updating
 
 To update a previous version of Calico, see [our upgrade guides](../operations/upgrading/index.mdx).
-
-##### Important upgrade notes
-
-- **Breaking change:** On upgrade, the UID of projectcalico.org/v3 resources will change. If you are using the Calico API server, it is recommended that you restart any controllers that manage projectcalico.org/v3 API resources after upgrading Calico, including the kube-controller-manager.
-  This change was necessary in order to fix an issue where duplicate UIDs could be seen on different API resources, confusing Kubernetes garbage collection.
-  [calico #8586](https://github.com/projectcalico/calico/pull/8586) (@caseydavenport)
-* This release re-enables VXLAN checksum offload for kernels > 5.7 (this takes effect when nodes are restarted).
-  The offload was disabled in the past due to kernel bugs but has substantial performance impact.
-  We've been unable to find an environment where this needs to be disabled, so are re-enabling the offload with the intent of proving it works or finding a setup where it doesn't.
-  If you encounter problems after upgrading and restarting nodes, please let us know and set `ChecksumOffloadBroken=true` in the FelixConfiguration's `featureDetectOverride` field to restore the previous behavior.
-  [calico #8774](https://github.com/projectcalico/calico/pull/8774) (@tomastigera)
 
 ### Calico Open Source 3.28.1 bug fix update
 
