Move ipvs mode to kube-proxy section

--- a/calico-enterprise/operations/ebpf/enabling-ebpf.mdx
+++ b/calico-enterprise/operations/ebpf/enabling-ebpf.mdx
@@ -159,6 +159,11 @@ To re-enable it:
 ```bash
 kubectl patch networks.operator.openshift.io cluster --type merge -p '{"spec":{"deployKubeProxy": true}}'
 ```
+:::note
+
+If you are running kube-proxy in IPVS mode, switch to IPTables mode before disabling.
+
+:::
 
 ### Avoiding conflicts with kube-proxy
 
