--- a/calico/operations/ebpf/enabling-ebpf.mdx
+++ b/calico/operations/ebpf/enabling-ebpf.mdx
@@ -54,7 +54,6 @@ eBPF (or "extended Berkeley Packet Filter"), is a technology that allows safe mi
 Limitations:
 
   - IPIP is not supported ({{prodname}} iptables does not support it either). VXLAN is the recommended overlay for eBPF mode.
-  - Switching to eBPF mode from IPVS mode is not supported. You have to switch from IPVS to IPTables mode before switching to eBPF mode.
 
 To enable IPv6 in eBPF mode, see [Configure dual stack or IPv6 only](../../networking/ipam/ipv6.mdx). You may be able to run with non-Calico IPAM. eks-cni is known to work.
 
@@ -285,6 +284,12 @@ To re-enable it:
 ```
 kubectl patch networks.operator.openshift.io cluster --type merge -p '{"spec":{"deployKubeProxy": true}}'
 ```
+
+:::note
+
+If you are running kube-proxy in IPVS mode, switch to IPTables mode before disabling.
+
+:::
 
 ### Avoiding conflicts with kube-proxy
 
