--- a/calico-enterprise/operations/ebpf/install.mdx
+++ b/calico-enterprise/operations/ebpf/install.mdx
@@ -72,10 +72,6 @@ For best pod-to-pod performance, we recommend using an underlying network that d
 
 If you must use an overlay, we recommend that you use VXLAN, not IPIP. VXLAN has better performance than IPIP in eBPF mode due to various kernel optimizations.
 
-Limitations:
-
-  - Switching to eBPF mode from IPVS mode is not supported. You have to switch from IPVS to IPTables mode before switching to eBPF mode.
-
 ## How to
 
 Installing {{prodname}} normally consists of the following steps, which are covered by the main installation
@@ -401,6 +397,12 @@ Then, should you want to start `kube-proxy` again, you can simply remove the nod
 
 </TabItem>
 </Tabs>
+
+:::note
+
+If you are running kube-proxy in IPVS mode, switch to IPTables mode before disabling.
+
+:::
 
 ## Next steps
 
