Scaffolding for CC 20.0.0

--- a/calico-cloud_versioned_docs/version-20-1/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-20-1/release-notes/index.mdx
@@ -5,6 +5,16 @@ title: Release notes
 
 # Calico Cloud release notes
 
+## September DD, 2024 (version 20.0.0)
+
+### New features and enhancements
+
+#### Feature 1
+
+#### Feature 2
+
+### Bug fixes
+
 ## July 23, 2024 (version 19.4.1)
 
 ### Bug fixes
@@ -24,7 +34,7 @@ Instead of creating exceptions one by one, you can add them all at once by uploa
 
 For more information, see [Exclude vulnerabilities from scan results](../image-assurance/exclude-vulnerabilities-from-scan-results.mdx).
 
-## Bug fixes
+### Bug fixes
 
 * Previously, defining new values for the crawdad daemon by using the ImageAssurance custom resource had no effect, and the default values remained in place.
   This problem is now fixed.
@@ -33,6 +43,14 @@ For more information, see [Exclude vulnerabilities from scan results](../image-a
 ## June 11, 2024 (version 19.3.0)
 
 ### New features and enhancements
+
+#### Jira integration for Image Assurance scan results
+
+We added a way to create and assign Jira issues directly from your Image Assurance scan results page.
+You can filter and prioritize vulnerabilities, and then assign the remediation work to members of your team.
+Calico Cloud populates the information you need, including a CSV file with detailed information about the vulnerabilities in your packages.
+
+For more information, see [Creating Jira issues for scan results](../image-assurance/creating-jira-issues-for-scan-results.mdx)
 
 #### Security events dashboard
 
@@ -67,17 +85,17 @@ This allows users to deploy this version of WAF at the edge of their cluster int
 
 For more information, see [Deploying WAF with an ingress gateway ](../threat/deploying-waf-ingress-gateway.mdx).
 
-#### ARM64 support
-
-This release expands our support to clusters with nodes running ARM64-based architectures.
-
 #### Specifying resource requests and limits in {{prodname}} components
 
 {{prodname}} now provides the ability to set resource requests and limits for the components that run as part of {{prodname}}. Please see documentation for specific guidance on setting these limits.
 
 ### Known issues
 
-### Bug fixes 
+* It is no longer supported to uninstall {{prodname}} on a cluster that before connecting to {{prodname}} it had Calico managed with AddonManager. This includes AKS clusters that had Calico installed and managed by AKS.
+
+### Bug fixes
+
+* Fixed an issue where occasionally the status of a cluster would not be updated when the cluster connected resulting in auth tokens and license not being updated in the cluster.
 
 ## April 30, 2024 (version 19.2.0)
 
