Update Calico API reference

--- a/calico_versioned_docs/version-3.26/reference/installation/_api.mdx
+++ b/calico_versioned_docs/version-3.26/reference/installation/_api.mdx
@@ -4831,6 +4831,24 @@ If omitted, the EGW Deployment will use its default value for tolerations.
 
 </td>
 </tr>
+<tr>
+<td>
+
+<code>priorityClassName</code><br/>
+<em>
+string
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+PriorityClassName allows to specify a PriorityClass resource to be used.
+</p>
+
+</td>
+</tr>
 </tbody>
 </table>
 <h3 id="operator.tigera.io/v1.EgressGatewayDeploymentPodTemplateSpec">EgressGatewayDeploymentPodTemplateSpec</h3>
