Update Calico enterprise next API docs

--- a/calico-enterprise/reference/installation/_api.mdx
+++ b/calico-enterprise/reference/installation/_api.mdx
@@ -3813,6 +3813,25 @@ LinseedDeployment configures the linseed Deployment.
 <tr>
 <td>
 
+<code>esKubeControllerDeployment</code><br/>
+<em>
+<a href="#operator.tigera.io/v1.CalicoKubeControllersDeployment">
+CalicoKubeControllersDeployment
+</a>
+</em>
+
+</td>
+<td>
+
+<p>
+ESKubeControllerDeployment configures the ESKubeController Deployment.
+</p>
+
+</td>
+</tr>
+<tr>
+<td>
+
 <code>dashboardsJob</code><br/>
 <em>
 <a href="#operator.tigera.io/v1.DashboardsJob">
@@ -6093,7 +6112,8 @@ Template describes the csi-node-driver DaemonSet pod that will be created.
 <p>
 
 (<em>Appears on:</em>
-<a href="#operator.tigera.io/v1.InstallationSpec">InstallationSpec</a>)
+<a href="#operator.tigera.io/v1.InstallationSpec">InstallationSpec</a>, 
+<a href="#operator.tigera.io/v1.TenantSpec">TenantSpec</a>)
 
 </p>
 <p>
@@ -6184,7 +6204,7 @@ string
 
 <p>
 Name is an enum which identifies the calico-kube-controllers Deployment container by name.
-Supported values are: calico-kube-controllers
+Supported values are: calico-kube-controllers, es-calico-kube-controllers
 </p>
 
 </td>
@@ -13724,6 +13744,25 @@ Default: false
 <tr>
 <td>
 
+<code>disableNewAllocations</code><br/>
+<em>
+bool
+</em>
+
+</td>
+<td>
+
+<p>
+DisableNewAllocations specifies whether or not new IP allocations are allowed from this pool.
+This is useful when you want to prevent new pods from receiving IP addresses from this pool, without
+impacting any existing pods that have already been assigned addresses from this pool.
+</p>
+
+</td>
+</tr>
+<tr>
+<td>
+
 <code>allowedUses</code><br/>
 <em>
 <a href="#operator.tigera.io/v1.IPPoolAllowedUse">
@@ -16207,7 +16246,7 @@ Template describes the linseed Deployment pod that will be created.
 LinuxDataplaneOption controls which dataplane is to be used on Linux nodes.
 </p>
 <p>
-One of: Iptables, BPF
+One of: Iptables, BPF, VPP, Nftables
 </p>
 <h3 id="operator.tigera.io/v1.LogCollectionSpec">LogCollectionSpec</h3>
 <p>
@@ -20254,6 +20293,25 @@ LinseedDeployment
 
 <p>
 LinseedDeployment configures the linseed Deployment.
+</p>
+
+</td>
+</tr>
+<tr>
+<td>
+
+<code>esKubeControllerDeployment</code><br/>
+<em>
+<a href="#operator.tigera.io/v1.CalicoKubeControllersDeployment">
+CalicoKubeControllersDeployment
+</a>
+</em>
+
+</td>
+<td>
+
+<p>
+ESKubeControllerDeployment configures the ESKubeController Deployment.
 </p>
 
 </td>
