Update Calico enterprise API docs

--- a/calico-enterprise_versioned_docs/version-3.20-1/reference/installation/_api.mdx
+++ b/calico-enterprise_versioned_docs/version-3.20-1/reference/installation/_api.mdx
@@ -3813,6 +3813,25 @@ LinseedDeployment configures the linseed Deployment.
 <tr>
 <td>
 
+<code>esKubeControllerDeployment</code><br/>
+<em>
+<a href="#operator.tigera.io/v1.CalicoKubeControllersDeployment">
+CalicoKubeControllersDeployment
+</a>
+</em>
+
+</td>
+<td>
+
+<p>
+ESKubeControllerDeployment configures the ESKubeController Deployment.
+</p>
+
+</td>
+</tr>
+<tr>
+<td>
+
 <code>dashboardsJob</code><br/>
 <em>
 <a href="#operator.tigera.io/v1.DashboardsJob">
@@ -6093,7 +6112,8 @@ Template describes the csi-node-driver DaemonSet pod that will be created.
 <p>
 
 (<em>Appears on:</em>
-<a href="#operator.tigera.io/v1.InstallationSpec">InstallationSpec</a>)
+<a href="#operator.tigera.io/v1.InstallationSpec">InstallationSpec</a>, 
+<a href="#operator.tigera.io/v1.TenantSpec">TenantSpec</a>)
 
 </p>
 <p>
@@ -6184,7 +6204,7 @@ string
 
 <p>
 Name is an enum which identifies the calico-kube-controllers Deployment container by name.
-Supported values are: calico-kube-controllers
+Supported values are: calico-kube-controllers, es-calico-kube-controllers
 </p>
 
 </td>
@@ -20254,6 +20274,25 @@ LinseedDeployment
 
 <p>
 LinseedDeployment configures the linseed Deployment.
+</p>
+
+</td>
+</tr>
+<tr>
+<td>
+
+<code>esKubeControllerDeployment</code><br/>
+<em>
+<a href="#operator.tigera.io/v1.CalicoKubeControllersDeployment">
+CalicoKubeControllersDeployment
+</a>
+</em>
+
+</td>
+<td>
+
+<p>
+ESKubeControllerDeployment configures the ESKubeController Deployment.
 </p>
 
 </td>
