Fix "calcoctl" typos

--- a/calico-enterprise_versioned_docs/version-3.17/reference/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/reference/index.mdx
@@ -16,7 +16,7 @@ APIs, CLI, architecture and design, and FAQ.
   <DocCardLink docId='reference/rest-api-reference' />
 </DocCardLinkLayout>
 
-## calcoctl reference
+## calicoctl reference
 
 <DocCardLinkLayout>
   <DocCardLink docId='reference/clis/calicoctl/overview' />
@@ -133,5 +133,3 @@ APIs, CLI, architecture and design, and FAQ.
   <DocCardLink docId='reference/faq' />
   <DocCardLink docId='reference/support-policy' />
 </DocCardLinkLayout>
-
-
