--- a/calico/reference/index.mdx
+++ b/calico/reference/index.mdx
@@ -15,7 +15,7 @@ APIs, CLI, architecture and design, and FAQ.
   <DocCardLink docId='reference/installation/api' />
 </DocCardLinkLayout>
 
-## calcoctl reference
+## calicoctl reference
 <DocCardLinkLayout>
   <DocCardLink docId='reference/calicoctl/overview' />
   <DocCardLink docId='reference/calicoctl/create' />
@@ -139,4 +139,3 @@ APIs, CLI, architecture and design, and FAQ.
   <DocCardLink docId='reference/configure-resources' />
   <DocCardLink docId='reference/configure-cni-plugins' />
 </DocCardLinkLayout>
-
