--- a/calico_versioned_docs/version-3.26/reference/index.mdx
+++ b/calico_versioned_docs/version-3.26/reference/index.mdx
@@ -14,7 +14,7 @@ APIs, CLI, architecture and design, and FAQ.
   <DocCardLink docId='reference/installation/api' />
 </DocCardLinkLayout>
 
-## calcoctl reference
+## calicoctl reference
 <DocCardLinkLayout>
   <DocCardLink docId='reference/calicoctl/overview' />
   <DocCardLink docId='reference/calicoctl/create' />
@@ -136,4 +136,3 @@ APIs, CLI, architecture and design, and FAQ.
   <DocCardLink docId='reference/configure-calico-node' />
   <DocCardLink docId='reference/configure-cni-plugins' />
 </DocCardLinkLayout>
-
