--- a/calico-enterprise_versioned_docs/version-3.18-2/reference/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/reference/index.mdx
@@ -18,7 +18,7 @@ APIs, CLI, architecture and design, and FAQ.
   <DocCardLink docId='reference/installation/tigerastatus' />
 </DocCardLinkLayout>
 
-## calcoctl reference
+## calicoctl reference
 
 <DocCardLinkLayout>
   <DocCardLink docId='reference/clis/calicoctl/overview' />
@@ -136,5 +136,3 @@ APIs, CLI, architecture and design, and FAQ.
   <DocCardLink docId='reference/faq' />
   <DocCardLink docId='reference/support-policy' />
 </DocCardLinkLayout>
-
-
